--- a/index.html
+++ b/index.html
@@ -271,11 +271,21 @@
             <div class="cert-card">
                 <div class="cert-info">
                     <span class="cert-title">Fundamentos de PowerBI</span>
-                    <span class="cert-inst">Santander Open Academy (2025)</span>
+                    <span class="cert-inst">Santander Open Academy (2026)</span>
                     <p>Especialista en Power Query, limpieza de datos, funciones de resumen y creación de cuadros de mando interactivos.</p>
                 </div>
                 <button class="btn-ver" onclick="abrirModal('https://i.postimg.cc/gJpKf6PT/diploma2-jpg.jpg')">Ver Diploma Completo</button>
             </div>
+             <div class="cert-grid">
+            <div class="cert-card">
+                <div class="cert-info">
+                    <span class="cert-title">Storytelling en el marketing digital</span>
+                    <span class="cert-inst">Santander Open Academy (2026)</span>
+                    <p>Formación centrada en el desarrollo de narrativas estratégicas aplicadas al ecosistema digital para mejorar la conexión con la audiencia y la efectividad de las campañas de marketing.</p>
+                </div>
+                <button class="btn-ver" onclick="abrirModal('https://i.postimg.cc/0NLkY34Z/diploma3-jpg.jpg')">Ver Diploma Completo</button>
+            </div>
+
         </div>
     </section>
 
@@ -348,4 +358,5 @@
 </body>
 
 </html>
+
 
