--- a/index.html
+++ b/index.html
@@ -257,7 +257,15 @@
 
     <section id="certificados">
         <h3 class="section-title">Certificaciones</h3>
-        
+          <div class="cert-grid">
+            <div class="cert-card">
+                <div class="cert-info">
+                    <span class="cert-title">Bachiller Universitario en Derecho </span>
+                    <span class="cert-inst">Universidad de Buenos Aires (2023)</span>
+                    <p>Diploma otorgado tras haber cumplido con la totalidad de las obligaciones académicas de la primera etapa de la carrera de Abogacía. Este certificado acredita una sólida base en los fundamentos jurídicos y el derecho público.</p>
+                </div>
+                <button class="btn-ver" onclick="abrirModal('https://i.postimg.cc/cJ8LS44W/Bachiller-en-derecho-page-0001.jpg')">Ver Diploma Completo</button>
+            </div>
         <div class="cert-grid">
             <div class="cert-card">
                 <div class="cert-info">
@@ -285,7 +293,15 @@
                 </div>
                 <button class="btn-ver" onclick="abrirModal('https://i.postimg.cc/0NLkY34Z/diploma3-jpg.jpg')">Ver Diploma Completo</button>
             </div>
-
+<div class="cert-grid">
+            <div class="cert-card">
+                <div class="cert-info">
+                    <span class="cert-title">Registro de Marcas </span>
+                    <span class="cert-inst">Estudio Juridico Bogao (2026)</span>
+                    <p>Capacitación profesional enfocada en los procesos de registro y protección de propiedad industrial en Argentina</p>
+                </div>
+                <button class="btn-ver" onclick="abrirModal('https://i.postimg.cc/1th55h4T/Registro-de-Marcas-page-0001.jpg')">Ver Diploma Completo</button>
+            </div>
         </div>
     </section>
 
@@ -413,6 +429,7 @@
 </body>
 
 </html>
+
 
 
 
