--- a/index.html
+++ b/index.html
@@ -257,15 +257,16 @@
 
     <section id="certificados">
         <h3 class="section-title">Certificaciones</h3>
-          <div class="cert-grid">
+ <div class="cert-grid">
             <div class="cert-card">
                 <div class="cert-info">
-                    <span class="cert-title">Bachiller Universitario en Derecho </span>
-                    <span class="cert-inst">Universidad de Buenos Aires (2023)</span>
-                    <p>Diploma otorgado tras haber cumplido con la totalidad de las obligaciones académicas de la primera etapa de la carrera de Abogacía. Este certificado acredita una sólida base en los fundamentos jurídicos y el derecho público.</p>
+                    <span class="cert-title">Bachiller Universitario en Derecho</span>
+                    <span class="cert-inst">Universidad de Buenos Aires (2025)</span>
+                    <p>Diploma otorgado tras haber cumplido con la totalidad de las obligaciones académicas de la primera etapa de la carrera de Abogacía el cual acredita una sólida base en los fundamentos jurídicos y el derecho público.</p>
                 </div>
                 <button class="btn-ver" onclick="abrirModal('https://i.postimg.cc/cJ8LS44W/Bachiller-en-derecho-page-0001.jpg')">Ver Diploma Completo</button>
             </div>
+
         <div class="cert-grid">
             <div class="cert-card">
                 <div class="cert-info">
@@ -429,6 +430,7 @@
 </body>
 
 </html>
+
 
 
 
