--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <section id="perfil">
         <h3 class="section-title">Perfil Profesional</h3>
         <p style="font-size: 1.1em; text-align: justify;">
-            Abogado egresado de la UBA con especialización en Derecho Empresarial. Cuento con sólida experiencia en la gestión integral de expedientes, control de documentación técnica y administración de procesos legales.
+            Abogado egresado de la UBA con especialización en Derecho Empresarial. Cuento con sólida experiencia en la gestión integral de expedientes, control de documentación técnica y administración de procesos legales. Poseo habilidades comerciales y de negociación orientadas al cumplimiento de objetivos y la eficiencia operativa. Experto en el manejo de sistemas de gestión y herramientas de oficina para garantizar la trazabilidad y confidencialidad de la información.
         </p>
     </section>
 
@@ -253,9 +253,4 @@
 
 </body>
 </html>
-
-
-
-
-
 
