--- a/index.html
+++ b/index.html
@@ -120,13 +120,79 @@
             <span class="job-role">Asistente Legal | Abogado Junior</span>
             <div class="job-desc">
                 <ul>
-                    <li>Seguimiento integral de 282 causas judiciales.</li>
-                    <li>Manejo de Lex Doctor, PJN, MEV, MEPRE.</li>
-                </ul>
-            </div>
-        </div>
-        </section>
+                    <li>Responsable del seguimiento integral de <strong>282 causas judiciales</strong>, asegurando la correcta tramitación de escritos, cédulas y acuerdos.</li>
 
+                    <li>Supervisión de plazos procesales y cumplimiento de protocolos internos para la presentación de recursos y oficios.</li>
+
+                    <li>Asistencia y concurrencia a audiencias.</li>
+
+                    <li>Interposición de recursos y control de plazos procesales.</li>
+
+                    <li>Manejo avanzado de sistemas de gestión judicial: <strong>Lex Doctor, PJN, MEV, MEPRE</strong> para el registro y auditoría de movimientos procesales.</li>
+
+                </ul>
+
+            </div>
+
+        </div>
+
+
+
+        <div class="job-item">
+
+            <div class="job-header">
+
+                <span class="job-title">Mi Opción Salud</span>
+
+                <span class="job-date">Mar 2023 - Jul 2023</span>
+
+            </div>
+
+            <span class="job-role">Asesor Comercial</span>
+
+            <div class="job-desc">
+
+                <ul>
+
+                    <li>Seguimiento de contratos comerciales y procesos de facturación, garantizando la exactitud en la documentación de soporte.</li>
+
+                    <li>Resolución de conflictos y atención personalizada a clientes, fortaleciendo la fidelización mediante una comunicación efectiva.</li>
+
+                </ul>
+
+            </div>
+
+        </div>
+
+
+
+        <div class="job-item">
+
+            <div class="job-header">
+
+                <span class="job-title">Terapia en Movimiento</span>
+
+                <span class="job-date">Dic 2018 - Mar 2022</span>
+
+            </div>
+
+            <span class="job-role">Administrativo</span>
+
+            <div class="job-desc">
+
+                <ul>
+
+                    <li>Coordinación de agendas profesionales y resguardo de documentación sensible bajo normas de confidencialidad.</li>
+
+                    <li>Gestión de facturación de prestaciones médicas y control de documentación para procesos internos.</li>
+
+                </ul>
+
+            </div>
+
+        </div>
+
+    </section>
     <section id="educacion">
         <h3 class="section-title">Educación y Formación</h3>
         <div class="edu-item">
@@ -253,4 +319,5 @@
 
 </body>
 </html>
+
 
