--- a/index.html
+++ b/index.html
@@ -194,15 +194,69 @@
 
     </section>
     <section id="educacion">
+
         <h3 class="section-title">Educación y Formación</h3>
+
+        
+
         <div class="edu-item">
+
             <div class="job-header">
+
                 <span class="job-title">Universidad de Buenos Aires (UBA)</span>
+
                 <span class="job-date">2021 - 2025</span>
+
             </div>
+
             <span class="job-role">Título: Abogado (Orientación en Derecho Empresarial)</span>
+
             <span class="edu-promedio">Promedio General: 7.15</span>
+
         </div>
+
+
+
+        <div class="edu-item">
+
+            <div class="job-header">
+
+                <span class="job-title">Patrocinio Jurídico Gratuito (UBA)</span>
+
+                <span class="job-date">2025</span>
+
+            </div>
+
+            <div class="job-desc">
+
+                <ul>
+
+                    <li>Desarrollé tareas de procuración y gestión de expedientes en los fueros civil, laboral y de familia.</li>
+
+                    <li>Redacción de demandas y escritos de diversa complejidad.</li>
+
+                    <li>Atención personalizada a consultantes para la recolección de documentación y seguimiento de causas.</li>
+
+                </ul>
+
+            </div>
+
+        </div>
+
+
+
+        <div class="edu-item">
+
+            <div class="job-header">
+
+                <span class="job-title">Jornada de Práctica Profesional</span>
+
+            </div>
+
+            <p>Participación en la jornada de "Garantías de acceso a la justicia y práctica profesional del derecho" donde se abordaron temas relacionados a la implementación de nuevas tecnologías en el ámbito jurídico.</p>
+
+        </div>
+
     </section>
 
     <section id="certificados">
@@ -319,5 +373,6 @@
 
 </body>
 </html>
+
 
 
