--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     <section>
         <h3 class="section-title">Habilidades</h3>
         <div class="skills-list">
-            <span class="skill">Lex Doctor</span> <span class="skill">PJN / MEV</span> <span class="skill">Power BI</span> <span class="skill">Agile</span>span class="skill">Marketing Digital</span>span class="skill">HTML</span>span class="skill">SQL</span>span class="skill">Marcas y propiedad Intelectual</span> span class="skill">Proactividad</span> span class="skill">Power Query</span>span class="skill">Ingles Intermedio</span> span class="skill">Office Avanzado</span>
+            <span class="skill">Lex Doctor</span> <span class="skill">PJN / MEV</span> <span class="skill">Power BI</span> <span class="skill">Agile</span> <span class="skill">Marketing digital</span> <span class="skill">HTML</span> <span class="skill">SQL</span> <span class="skill">Derecho de Marcas y Propiedad Intelectual</span> <span class="skill">Proactividad</span> <span class="skill">PowerQuery</span> <span class="skill">Ingles intermedio</span> <span class="skill">Office Avanzado</span>Ingles intermedio</span> span class="skill">Office Avanzado</span>
         </div>
     </section>
 </div>
@@ -373,6 +373,7 @@
 
 </body>
 </html>
+
 
 
 
